# aki-mline

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  TODO.md  build.rs
docs/: review.1.md  review.2.md
fixtures/: rustup-target-list.txt
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  mod.rs  parse.rs
src/util/: mod.rs  opt_around_num.rs
tests/: helper.rs  helper_l.rs  test.rs  test_e.rs  test_l.rs  test_s.rs
xtask/src/: aki-mline-cmd.txt  cmd.txt  gen_src_cmd.rs  main.rs  update_docs.rs
