[package]
name = "aki-mline"
version = "0.1.12"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
match line, regex text filter like grep
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
repository = "https://github.com/aki-akaguma/aki-mline"

[lib]
name = "libaki_mline"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-mline"
path = "src/main.rs"

[features]
default = []

[dependencies]
atty = "0.2"
regex = "1.3"
anyhow = "1.0"
flood-tide = { version="0.1", default-features=true, features=["stop_at_mm"] }
runnel = "0.3"
#runnel = { path="../../lib/runnel" }

[dev-dependencies]

[build-dependencies]
rustc_version = "=0.2.3"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = []
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program is regex text filter like grep.
"""
depends = "$auto"
assets = [
    ["target/release/aki-mline", "usr/bin/", "755"],
]
