[package]
name = "aki-mline"
version = "0.1.15"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
match line, regex text filter like a grep of linux command.
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
repository = "https://github.com/aki-akaguma/aki-mline"

[lib]
name = "libaki_mline"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-mline"
path = "src/main.rs"

[features]
default = []

[dependencies]
anyhow = "1.0"
atty = "0.2"
flood-tide = { version="0.1", default-features=true, features=["stop_at_mm"] }
regex = "1.4"
runnel = "0.3"

[dev-dependencies]

[build-dependencies]
rustc_version = "0.3"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = []
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program is regex text filter like a grep of linux command.
"""
depends = "$auto"
assets = [
    ["target/release/aki-mline", "usr/bin/", "755"],
]
